# min-ai-scientist

./: .gitignore  .ruff.toml  Makefile  README.md  mypy.ini  pyproject.toml
data/text8/: prepare.py
datasets/: experiments.json
datasets/cache/__main__--root-project-scientist-<ipython-input-26b7b6fc30b6>/generate_initial_idea/9f71bdf16723883067d5963f6edd6be1/: metadata.json  output.pkl
datasets/cache/__main__--root-project-scientist-<ipython-input-26b7b6fc30b6>/refine_idea/: func_code.py
datasets/cache/__main__--root-project-scientist-<ipython-input-26b7b6fc30b6>/refine_idea/c96bb25d4fc7acc31c94fb2976a7514d/: metadata.json  output.pkl
datasets/cache/__main__--root-project-scientist-<ipython-input-9f5161434911>/generate_initial_idea/: func_code.py
datasets/cache/__main__--root-project-scientist-<ipython-input-9f5161434911>/generate_initial_idea/11dd88c5b6ae1fe0f45c7495933acb95/: metadata.json  output.pkl
datasets/cache/__main__--root-project-scientist-<ipython-input-9f5161434911>/generate_initial_idea/23ec26ebf3c12cd3e97d23c8e1a0d528/: metadata.json  output.pkl
example/: agent.py  ai.py  datasets.py  models.py
example/evals/: eval_agent.py  eval_agent_jupyter.py
reagency/: client.py  dataset.py  hooks.py  log.py  provider.py  provider_anthropic.py  provider_openai.py
runs/: run_log.json
scientist/: build_datasets.ipynb  config.py  constants.py  datasets.py  generate_ideas copy.py  generate_ideas.py  models.py  perform_experiments.py  perform_review.py  perform_writeup.py  perform_writeup_old.py  run.py  seed_ideas.py
tests/: conftest.py  test_dataset.py  test_hook.py  test_run.py  test_serialization.py  test_task.py
(+120 files in other folders)
