[tool.poetry]
name = "scientist"
version = "0.1.0"
description = "ai scientist"
authors = ["danielreuter <dreuter14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langfuse = "^2.52.1"
mypy = "^1.12.1"
openai = "1.47.0"
anthropic = "^0.37.1"
petname = "^2.6"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
pillow = "10.4.0"
joblib = "^1.4.2"
pytest-asyncio = "^0.24.0"
nest-asyncio = "^1.6.0"
numpy = "1.26.4"
torch = "^2.5.0"
einops = "^0.8.0"
tqdm = "4.66.5"
ruff = "^0.7.1"
agentlens = "^0.1.6"
aider-chat = "^0.60.1"
pymupdf4llm = "^0.0.17"
pypdf = "^5.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
